--- a/KeySequencer/Sciendo.KS/MainWindow.xaml
+++ b/KeySequencer/Sciendo.KS/MainWindow.xaml
@@ -28,20 +28,41 @@
         </Grid.RowDefinitions>
         <TextBlock Grid.Column="0" Grid.Row="0" Foreground="Black" FontSize="12" TextAlignment="Right" Text="From:"  Margin="2,4,2,2" Padding="4,4,2,2"></TextBlock>
         <TextBox Grid.Column="1" Grid.Row="0" Background="Wheat" Foreground="Black" FontSize="12" Text="A" TextAlignment="Left"  Margin="2,4,2,2" Padding="2,4,2,2"></TextBox>
-        <ComboBox Grid.Column="1" Grid.Row="0" Background="Wheat" Foreground="Black" FontSize="12" Margin="2,4,2,2" Padding="2,4,2,2" ItemsSource="{Binding FromKeys}" SelectedItem="{Binding SelectedFromKey}"></ComboBox>
+        <ComboBox Grid.Column="1" Grid.Row="0" Background="Wheat" Foreground="Black" FontSize="12" Margin="2,4,2,2" Padding="2,4,2,2" ItemsSource="{Binding FromKeys}" 
+                  SelectedItem="{Binding SelectedFromKey, Mode=TwoWay}"></ComboBox>
         <Rectangle Grid.Row="1" Grid.Column="0" Fill="Black"></Rectangle>
         <Rectangle Grid.Row="1" Grid.Column="1" Fill="Black" Grid.ColumnSpan="2"></Rectangle>
         <TextBlock Grid.Column="0" Grid.Row="1" Foreground="Orange" FontSize="10" FontWeight="Bold"  TextAlignment="Right" Text="Similarity"  Margin="2,4,2,2" Padding="4,4,2,2"></TextBlock>
         <TextBlock Grid.Column="1" Grid.Row="1" Foreground="Orange" FontSize="10" FontWeight="Bold"  TextAlignment="Left" Text="To Key"  Margin="2,4,2,2" Padding="4,4,2,2"></TextBlock>
         <TextBlock Grid.Column="0" Grid.Row="2" Foreground="Black" FontSize="10" Background="ForestGreen"  TextAlignment="Right" Text="Super"  Margin="2,4,2,2" Padding="4,4,2,2"></TextBlock>
-        <TextBlock Grid.Column="1" Grid.Row="2" Foreground="Black" FontSize="12" Background="ForestGreen"  TextAlignment="Left" Text="{Binding SuperToKey}"  Margin="2,4,2,2" Padding="4,4,2,2"></TextBlock>
+        <TextBlock Grid.Column="1" Grid.Row="2" Foreground="Black" FontSize="12" Background="ForestGreen"  TextAlignment="Left" Text="{Binding SuperToKey}"  Margin="2,4,2,2" Padding="4,4,2,2">
+            <TextBlock.InputBindings>
+                <MouseBinding Command="{Binding SelectSuper}" MouseAction="LeftClick" />
+            </TextBlock.InputBindings>
+        </TextBlock>
         <TextBlock Grid.Column="0" Grid.Row="3" Foreground="Black" FontSize="10" Background="Olive" TextAlignment="Right" Text="High"  Margin="2,4,2,2" Padding="4,4,2,2"></TextBlock>
-        <TextBlock Grid.Column="1" Grid.Row="3" Foreground="Black" FontSize="12" Background="Olive" TextAlignment="Left" Text="{Binding HighToKey}"  Margin="2,4,2,2" Padding="4,4,2,2"></TextBlock>
+        <TextBlock Grid.Column="1" Grid.Row="3" Foreground="Black" FontSize="12" Background="Olive" TextAlignment="Left" Text="{Binding HighToKey}"  Margin="2,4,2,2" Padding="4,4,2,2">
+            <TextBlock.InputBindings>
+                <MouseBinding Command="{Binding SelectHigh}" MouseAction="LeftClick" />
+            </TextBlock.InputBindings>
+        </TextBlock>
         <TextBlock Grid.Column="0" Grid.Row="4" Foreground="Black" FontSize="10" Background="Goldenrod" TextAlignment="Right" Text="Medium"  Margin="2,4,2,2" Padding="4,4,2,2"></TextBlock>
-        <TextBlock Grid.Column="1" Grid.Row="4" Foreground="Black" FontSize="12" Background="Goldenrod" TextAlignment="Left" Text="{Binding MediumToKey}"  Margin="2,4,2,2" Padding="4,4,2,2"></TextBlock>
+        <TextBlock Grid.Column="1" Grid.Row="4" Foreground="Black" FontSize="12" Background="Goldenrod" TextAlignment="Left" Text="{Binding MediumToKey}"  Margin="2,4,2,2" Padding="4,4,2,2">
+            <TextBlock.InputBindings>
+                <MouseBinding Command="{Binding SelectMedium}" MouseAction="LeftClick" />
+            </TextBlock.InputBindings>
+        </TextBlock>
         <TextBlock Grid.Column="0" Grid.Row="5" Foreground="Black" FontSize="10" Background="Gold"  TextAlignment="Right" Text="Low"  Margin="2,4,2,2" Padding="4,4,2,2"></TextBlock>
-        <TextBlock Grid.Column="1" Grid.Row="5" Foreground="Black" FontSize="12" Background="Gold"  TextAlignment="Left" Text="{Binding Low1ToKey}"  Margin="2,4,2,2" Padding="4,4,2,2"></TextBlock>
+        <TextBlock Grid.Column="1" Grid.Row="5" Foreground="Black" FontSize="12" Background="Gold"  TextAlignment="Left" Text="{Binding Low1ToKey}"  Margin="2,4,2,2" Padding="4,4,2,2">
+            <TextBlock.InputBindings>
+                <MouseBinding Command="{Binding SelectLow1}" MouseAction="LeftClick" />
+            </TextBlock.InputBindings>
+        </TextBlock>
         <TextBlock Grid.Column="0" Grid.Row="6" Foreground="Black" FontSize="10" Background="Gold" TextAlignment="Right" Text="Low"  Margin="2,4,2,2" Padding="4,4,2,2"></TextBlock>
-        <TextBlock Grid.Column="1" Grid.Row="6" Foreground="Black" FontSize="12" Background="Gold" TextAlignment="Left" Text="{Binding Low2ToKey}"  Margin="2,4,2,2" Padding="4,4,2,2"></TextBlock>
+        <TextBlock Grid.Column="1" Grid.Row="6" Foreground="Black" FontSize="12" Background="Gold" TextAlignment="Left" Text="{Binding Low2ToKey}"  Margin="2,4,2,2" Padding="4,4,2,2">
+            <TextBlock.InputBindings>
+                <MouseBinding Command="{Binding SelectLow2}" MouseAction="LeftClick" />
+            </TextBlock.InputBindings>
+        </TextBlock>
     </Grid>
 </Window>
